--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,75 +1,80 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Hack Nerd Font";
     font-size: 13px;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+    background: rgba(0, 0, 0, 0.87);
+    border-width: 2px;
+    border-color: #5f27cd;
+    border-style: solid;
+    border-radius: 0px;
 }
-
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
-button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
 /* you can set a style on hover for any module like this */
 #pulseaudio:hover {
     background-color: #a37800;
 }
 
+button.focused {
+    background-color: #5f27cd;
+}
+
+#workspaces {
+    border-radius: 0px 0px 0px 6px;
+    margin-left: -9px;
+}
+
+#workspaces button:nth-child(1) .visible {
+    border-radius: 0px 0px 0px 6px;
+}
+
 #workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-    color: #ffffff;
+    padding: 5px 15px 5px 10px;
+    color: #bbc2cf;
+    margin: 1px 0;
 }
 
+
+button:hover,
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: #2b125d;
 }
 
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+button {
+    border: 0px;
+    margin: 2px 0;
+}
+
+button:hover {
+    border-radius: 0;
+    box-shadow: none;
+    border-width: 0px;
+}
+
+#workspaces button.visible {
+    color: #bbc2cf;
+    background-color: #2b125d;
+    border-radius: 0;
+    box-shadow: none;
+    border-width: 0px;
+}
+
+#workspaces button.focused.current_output {
+    color: #ffffff;
+    background-color: #5f27cd;
+    border-radius: 0px;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+    color: #6d4774;
+    background-color: #7bc275;
+    border-radius: 0px;
+}
+
+#workspaces button.focused:hover {
+    color: white;
+    background-color: #2b125d;
 }
 
 #mode {
