fresh new waybar config - stolen

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,332 +1,159 @@
-* {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Hack Nerd Font";
-    font-size: 13px;
+#waybar.top {
+  background: none;
+}
+#waybar.top > box.horizontal {
+  background: #11111b;
+  /*background: rgba(11, 11, 11, 0.5);*/
+  box-shadow: 0 0 4pt #11111b;
+  /*box-shadow: 0 0 0pt #11111b;*/
+  border-radius: 12pt;
+  margin: 6pt;
+  padding: 2pt;
 }
 
-window#waybar {
-    background: rgba(0, 0, 0, 0.87);
-    border-width: 2px;
-    border-color: #5f27cd;
-    border-style: solid;
-    border-radius: 0px;
-}
-/* you can set a style on hover for any module like this */
-#pulseaudio:hover {
-    background-color: #a37800;
-}
-
-button.focused {
-    background-color: #5f27cd;
-}
-
-#workspaces {
-    border-radius: 0px 0px 0px 6px;
-    margin-left: -9px;
-}
-
-#workspaces button:nth-child(1) .visible {
-    border-radius: 0px 0px 0px 6px;
-}
-
-#workspaces button {
-    padding: 5px 15px 5px 10px;
-    color: #bbc2cf;
-    margin: 1px 0;
-}
-
-
-button:hover,
-#workspaces button:hover {
-    background: #2b125d;
-}
-
-button {
-    border: 0px;
-    margin: 2px 0;
-}
-
-button:hover {
-    border-radius: 0;
-    box-shadow: none;
-    border-width: 0px;
-}
-
-#workspaces button.visible {
-    color: #bbc2cf;
-    background-color: #2b125d;
-    border-radius: 0;
-    box-shadow: none;
-    border-width: 0px;
-}
-
-#workspaces button.focused.current_output {
-    color: #ffffff;
-    background-color: #5f27cd;
-    border-radius: 0px;
-}
-
-#workspaces button.urgent {
-    color: #6d4774;
-    background-color: #7bc275;
-    border-radius: 0px;
-}
-
-#workspaces button.focused:hover {
-    color: white;
-    background-color: #2b125d;
-}
-
-#mode {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#mpd {
-    padding: 0 10px;
-    color: #ffffff;
-}
-
-#window,
-#workspaces {
-    margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+#custom-rofi {
+  margin-left: 7pt;
+  padding-right: 3pt;
+  font-size: 12pt;
 }
 
 #clock {
-    background-color: #64727D;
+  margin-right: 10pt;
 }
 
-#battery {
-    background-color: #ffffff;
-    color: #000000;
+#workspaces {
+  margin-left: 12pt;
+}
+#workspaces button {
+  color: #a2a5c9;
+}
+#workspaces button:not(:first-child) {
+  margin-left: 2pt;
+}
+#workspaces button.visible {
+  color: #89b4fa;
+}
+#workspaces button.active {
+  color: #f38ba8;
+}
+#workspaces button:hover, #workspaces button:focus {
+  background: none;
+  border-color: transparent;
+  box-shadow: none;
+}
+#workspaces button:hover:not(.active):not(.visible), #workspaces button:focus:not(.active):not(.visible) {
+  color: #9399b2;
 }
 
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+#mpris {
+  background: #1e1e2e;
+  color: #a6e3a1;
+  border-radius: 12pt;
+  margin-left: 15pt;
+  padding: 0 8pt;
 }
 
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
-}
-
-/* Using steps() instead of linear as a timing function to limit cpu usage */
-#battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-#power-profiles-daemon {
-    padding-right: 15px;
-}
-
-#power-profiles-daemon.performance {
-    background-color: #f53c3c;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.balanced {
-    background-color: #2980b9;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.power-saver {
-    background-color: #2ecc71;
-    color: #000000;
-}
-
-label:focus {
-    background-color: #000000;
-}
-
-#cpu {
-    background-color: #2ecc71;
-    color: #000000;
+#window {
+  margin-left: 15pt;
+  margin-right: 20pt;
 }
 
 #memory {
-    background-color: #9b59b6;
+  color: #fab387;
+  margin-right: 12pt;
 }
 
-#disk {
-    background-color: #964B00;
-}
-
-#backlight {
-    background-color: #90b1b1;
-}
-
-#network {
-    background-color: #2980b9;
-}
-
-#network.disconnected {
-    background-color: #f53c3c;
-}
-
-#pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
-}
-
-#pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
-}
-
-#wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
-}
-
-#wireplumber.muted {
-    background-color: #f53c3c;
-}
-
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f0932b;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
+#cpu {
+  color: #927dff;
+  margin-right: 12pt;
 }
 
 #tray {
-    background-color: #2980b9;
+  margin-right: 10pt;
+}
+#tray menu {
+  background: #1e1e2e;
+  padding: 2pt;
+}
+#tray menu * {
+  margin: 2pt;
+}
+#tray menu check {
+  margin-right: 4pt;
 }
 
-#tray > .passive {
-    -gtk-icon-effect: dim;
+@keyframes blink {
+  to {
+    background-color: rgba(30, 34, 42, 0.5);
+    color: #cdd6f4;
+  }
+}
+#backlight {
+  color: #cba6f7;
+  margin-right: 10pt;
 }
 
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+#pulseaudio {
+  color: #74c7ec;
+  margin-right: 10pt;
 }
 
-#idle_inhibitor {
-    background-color: #2d3436;
+#battery {
+  color: #f9e2af;
+  margin-right: 15pt;
 }
 
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
+#battery.full,
+#battery.good,
+#battery.charging,
+#battery.plugged {
+  color: #a6e3a1;
 }
 
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
+#battery.critical:not(.charging) {
+  color: #f38ba8;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
-#mpd.disconnected {
-    background-color: #f53c3c;
+#custom-color-picker {
+  margin-right: 18pt;
+  font-size: 9pt;
 }
 
-#mpd.stopped {
-    background-color: #90b1b1;
+#custom-screenshot {
+  margin-right: 18pt;
+  font-size: 10pt;
 }
 
-#mpd.paused {
-    background-color: #51a37a;
+#custom-wallpaper {
+  margin-right: 16pt;
+  font-size: 12pt;
 }
 
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+#custom-power {
+  color: rgb(171, 22, 22);
+  margin-right: 11pt;
+  font-size: 10pt;
 }
 
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Hack Nerd Font";
+  font-size: 11pt;
+  font-weight: 800;
+  transition-property: background;
+  transition-duration: 0.5s;
 }
 
-#keyboard-state > label {
-    padding: 0 5px;
+tooltip {
+  background: #11111b;
+  color: #cdd6f4;
+  border-radius: 5pt;
 }
 
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-	background-color: transparent;
-}
-
-#privacy {
-    padding: 0;
-}
-
-#privacy-item {
-    padding: 0 5px;
-    color: white;
-}
-
-#privacy-item.screenshare {
-    background-color: #cf5700;
-}
-
-#privacy-item.audio-in {
-    background-color: #1ca000;
-}
-
-#privacy-item.audio-out {
-    background-color: #0069d4;
-}
+/*# sourceMappingURL=style.css.map */
